refactor: rename VortexCMS to ContentX
